--- a/main/src/App.css
+++ b/main/src/App.css
@@ -1,10 +1,13 @@
-.container {
+*{
+  box-sizing: border-box;
+}
+.my-container {
   width: 1440px;
   max-width: 100%;
   margin: auto;
 }
 
-.nav-bar {
+.my-nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,6 +20,24 @@
   justify-content: space-between;
 }
 
+.icon-25px {
+  font-size: 25px;
+}
+
+.our-store {
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.track-order {
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .searchContainer {
   background: #003F62;
 }
@@ -25,6 +46,9 @@
   height: 100px;
   display: flex;
   justify-content: space-between;
+  width: 1440px;
+  max-width: 100%;
+  margin: auto;
 }
 
 .searchDivLogo {
@@ -33,9 +57,9 @@
 }
 
 .logoDiv {
+  margin-left: 40px;
   display: flex;
-  width: 500px;
-  margin: auto;
+  width: 700px;
   justify-content: space-between;
   align-items: center;
 }
@@ -45,10 +69,53 @@
   width: 438px;
   height: 56px;
   border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.searchInput {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  margin-left: 30px;
+  border: none;
+  font-size: 14px;
+  height: 21px;
+}
+
+.searchInput:focus {
+  outline: none
+}
+
+.search-btn {
+  align-self: end;
+  width: 132px;
+  height: 56px;
+  background: #EDA415;
+  border-radius: 20px;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
 .register {
+  justify-content: space-evenly;
   align-items: center;
   width: 300px;
   display: flex;
   color: white;
+}
+
+.sign-in {
+  width: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.browse-div{
+  display: flex;
+  height: 71px;
+  background: #F4F4F4;
+}
+.browse-categories {
+  background: #EDA415;
 }
