--- a/main/src/App.css
+++ b/main/src/App.css
@@ -140,6 +140,7 @@
   font-size: 16px;
   border-radius: 0 !important;
 }
+
 .browse-btn:hover {
   background: #eda515ab;
 }
@@ -159,6 +160,17 @@
   color: #003F62;
 }
 
+.test {
+  width: 500px;
+  display: flex;
+  font-size: 16px;
+  padding-right: 60px;
+}
+
 .browse-free-return p {
   margin: 0;
+}
+
+.carousel-div {
+  height: 394px;
 }
