--- a/main/src/App.css
+++ b/main/src/App.css
@@ -160,17 +160,24 @@
   color: #003F62;
 }
 
-.test {
-  width: 500px;
-  display: flex;
-  font-size: 16px;
-  padding-right: 60px;
-}
-
 .browse-free-return p {
   margin: 0;
 }
 
 .carousel-div {
+  border: black 1px solid;
   height: 394px;
+}
+.carousel-second-div {
+  height: 400px;
+}
+
+.carousel-img {
+  width: 350px;
+  position: relative;
+  left: 932px;
+  top: 38px;
+}
+.test2 {
+  height: 500px;
 }
