--- a/main/src/App.css
+++ b/main/src/App.css
@@ -207,14 +207,14 @@
 
 .carousel-indicators {
   justify-content: start !important;
-  bottom: 10px !important;
+  bottom: -10px !important;
   left: 130px !important;
 }
 
 .carousel-indicators>button {
   border-radius: 50%;
-  width: 20px !important;
-  height: 20px !important;
+  width: 15px !important;
+  height: 15px !important;
   border: 1px solid #ADADAD !important;
   left: 100px !important;
   background-color: white !important;
@@ -235,7 +235,7 @@
 
 .carousel-shop-btn {
   position: absolute;
-  bottom: 70px;
+  bottom: -150px;
   left: 220px;
   width: 144px;
   height: 61px;
@@ -247,7 +247,7 @@
 
 .carousel-view-btn {
   position: absolute;
-  bottom: 70px;
+  bottom: -150px;
   left: 400px;
   background-color: white;
   width: 144px;
@@ -255,4 +255,17 @@
   color: #316887;
   border: 1px solid #316887;
   border-radius: 20px;
+}
+
+.three-container {
+  margin-top: 100px !important;
+  width: 1200px;
+  max-width: 100%;
+  margin: auto;
+}
+.test{
+  width: 300px ;
+}
+.test123 {
+  border: black 0.1px solid;
 }
