--- a/main/src/App.css
+++ b/main/src/App.css
@@ -78,6 +78,7 @@
 .searchInput {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   margin-left: 30px;
+  width: 250px;
   border: none;
   font-size: 14px;
   height: 21px;
@@ -189,12 +190,12 @@
 .carousel-img {
   width: 350px;
   position: relative;
-  left: 900px;
+  left: 800px;
   top: 100px;
 }
 
 .carousel-inner {
-  height: 500px;
+  height: 400px;
 }
 
 .carousel-caption {
@@ -266,6 +267,6 @@
 .test{
   width: 300px ;
 }
-.test123 {
+.slider-border {
   border: black 0.1px solid;
 }
