--- a/main/src/App.css
+++ b/main/src/App.css
@@ -373,7 +373,7 @@
   background-image: url("../public/SaleLaptop.png");
   background-repeat: no-repeat;
   background-size: contain;
-  height: 440px;
+  height: 460px;
   margin-top: 51px;
 }
 
@@ -419,6 +419,12 @@
 
 .speaker-div {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.speaker-first-div {
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -429,7 +435,170 @@
   border-radius: 20px;
 }
 
+.speaker-big-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 37px;
+
+  width: 254px;
+  height: 247px;
+
+}
+
+.speaker-second-div {
+  margin-top: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 .speaker-img {
   width: 425px;
   height: 416px;
+}
+
+.speaker-small-div {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 493px;
+  height: 241px;
+  border: 1px solid #B6B6B6;
+  border-radius: 19.6707px;
+}
+
+.add-to-cart-btn {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background: #87BCD9;
+  border-radius: 19.6707px;
+  width: 204.58px;
+  height: 60px;
+}
+
+.blue {
+  color: #003F62;
+}
+
+.controller-class {
+  height: 168px;
+}
+
+.warranty-div {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 90px;
+  height: 155px;
+  background: #E2F4FF;
+  border-radius: 20px;
+}
+
+.free-delivery-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 302px;
+  height: 67px;
+
+}
+
+.warranty-icons {
+  font-size: 50px;
+  color: #EDA415;
+}
+
+.employee-div {
+  margin-top: 90px;
+}
+
+.employees-border {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #BABABA;
+  border-radius: 20px;
+  width: 432.79px;
+  height: 242.1px;
+}
+
+.employee-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 317.82px;
+  height: 100.02px;
+}
+
+.employee-description {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 395.4px;
+  height: 82.26px;
+  background: #E2F4FF;
+  border-radius: 18.695px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13.1707px;
+  line-height: 20px;
+  color: #003F62;
+}
+.employee-description>h6 {
+  font-size: 13.1707px;
+  padding: 0 10px;
+}
+
+.spacing-tech-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 136px;
+  background: #E2F4FF;
+}
+
+.latest-div {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.latest-news-slider {
+  margin-top: 52px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 650px;
+  height: 369px;
+  border: 1px solid #C8C8C8;
+  border-radius: 20px;
+}
+
+.latest-news-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 265px;
+  height: 187px;
+}
+
+.latest-news-text>h3 {
+  font-weight: 600;
+  font-size: 22.38px;
+  line-height: 34px;
+}
+
+.latest-news-text>h6 {
+  font-weight: 400;
+  font-size: 13.1707px;
+  line-height: 20px;
 }
