--- a/main/src/App.css
+++ b/main/src/App.css
@@ -550,6 +550,7 @@
   line-height: 20px;
   color: #003F62;
 }
+
 .employee-description>h6 {
   font-size: 13.1707px;
   padding: 0 10px;
@@ -601,4 +602,71 @@
   font-weight: 400;
   font-size: 13.1707px;
   line-height: 20px;
+}
+
+.footer-background {
+  height: 511px;
+  background: #E2F4FF;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 1440px;
+  max-width: 100%;
+  margin: auto;
+  height: 511px;
+}
+
+.newsletter {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 1320px;
+  height: 139px;
+  background: #FFFFFF;
+  border-radius: 20px;
+}
+
+.newsletter-email {
+  background: #EDA415;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 10px 0px 25px;
+  color: white;
+  width: 388px;
+  height: 63px;
+
+}
+
+.icon-50px {
+  color: #EDA415;
+  font-size: 50px;
+}
+
+.newsletter-email>h6 {
+  margin: 0;
+}
+
+.call-us>p {
+  margin: 0 !important;
+}
+
+.call-us {
+  display: flex;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-logo {
+  width: 140px;
+  height: 39px;
+  margin-bottom: 41px;
 }
